[package]
name = "exchnage_core_service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.10.2"
log = "0.4.27"
mysql_async = "0.35.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
env_logger = "0.11.8"
tokio = { version = "1.44.2", features = ["full"] }
thiserror = "2.0.12"
bip39 = { version = "2.1.0", features = ["rand"] }
bip32 = "0.5.3"
bitcoin = { version = "0.32.5", features = ["rand-std"] }
hex = "0.4.3"
secp256k1 = "0.30.0"
sqlx = { version = "0.7", features = [
    "mysql",
    "runtime-tokio-native-tls",
    "macros",
    "migrate"
]}
dotenv = "0.15.0"
time = "0.3.41"
solana-client = "2.2.7"
signature = "1.6.4"
solana-sdk = "2.2.2"
