[package]
name = "exchnage_core_service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.10.2"
log = "0.4.27"
mysql_async = "0.35.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
env_logger = "0.11.8"
tokio = { version = "1.44.2", features = ["full"] }
thiserror = "2.0.12"

bip32 = { version = "0.5.3" , features = ["secp256k1"] }
bitcoin = { version = "0.32.5", features = ["rand-std"] }
hex = "0.4.3"
secp256k1 = "0.30.0"
sqlx = { version = "0.7", features = [
    "mysql",
    "runtime-tokio-native-tls",
    "macros",
    "migrate"
]}
dotenv = "0.15.0"
time = "0.3.41"
signature = "1.6.4"
sha3 = { version = "0.10.8" }
k256 = { version = "0.13.4", features = ["ecdsa"]  }
rand = "0.8.0"
rand_core = "0.9.3"
ecdsa = "0.16.9"
anychain-solana = "0.1.14"
anychain-core = "0.1.7"
curve25519-dalek = "4.1.3"
ed25519-dalek = "2.1.1"
format = "0.2.4"
spl-associated-token-account = "6.0.0"
group = "0.13.0"

bip39 = { version = "2.0.2", features = ["rand"] }
bs58 = "0.5.0"
hdwallet = "0.4.1"
ethereum-types = "0.15.1"

